# egbis-opencv

./: CMakeLists.txt  README.md  disjoint-set.hpp  main.cpp  misc.hpp  segment-graph.hpp  segment-image.hpp
egbis/: convolve.hpp  filter.hpp  imconv.hpp  imutil.hpp  segment-graph.hpp  segment-image.hpp
